# fw

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  ABOUT.md  ARQUITETURA.md  CONTRIBUTING.md  EXEGESE.md  GLOSSARIO.md  LICENSE  Makefile  README.md  SECURITY.md  git_status_out.txt  package.json  pyproject.toml  remotes.txt  tsconfig.json
.github/workflows/: ci.yml
config/: bridge-config.yaml
docs/: tabelas_resumo.md
src/: __init__.py
src/apps_script/: event_bus.js  job_queue.js  session_manager.js  sheet_repository.js
src/core/: __init__.py  assertion_agent.py  nl_reasoner.py  oracle_query.py  semantic_translator.py  unified_capability.ts
tests/: conftest.py  test_core_init.py  test_semantic_translator.py
